# CPP_Tools_CMake

./: .gitmodules  README.md
00_HelloCMake/: 00_hello_cmake.cpp  CMakeLists.txt  learning.cpp
01_HelloFromFileLib/: 01_move_funcs_to_separate_files.cpp  CMakeLists.txt  fun_lib.cpp
02_MoveFuncFileToSubDir/: 02_move_funcs_to_sub_dir.cpp  CMakeLists.txt
02_MoveFuncFileToSubDir/app/main/: 02_move_funcs_to_sub_dir.cpp  CMakeLists.txt
02_MoveFuncFileToSubDir/fun_lib/: fun_lib.cpp  fun_lib.h
02_keep_src_hdrs_separate/: CMakeLists.txt
02_keep_src_hdrs_separate/include/: CMakeLists.txt
02_keep_src_hdrs_separate/src/: CMakeLists.txt  fun_lib.cpp
03_00_variables_in_CMakeLists/: CMakeLists.txt
03_00_variables_in_CMakeLists/libs/fun_lib/: CMakeLists.txt
03_01_options_in_CMakeLists/: CMakeLists.txt
03_01_options_in_CMakeLists/libs/fun_lib/: fun_lib.cpp
03_variables_in_CMakeLists/: CMakeLists.txt
03_variables_in_CMakeLists/libs/: CMakeLists.txt
03_variables_in_CMakeLists/libs/fun_lib/: CMakeLists.txt
04_generate_automatic_hdr_files/: CMakeLists.txt
04_generate_automatic_hdr_files/app/main/: 04_generate_automatic_hdr_files.cpp  CMakeLists.txt
04_generate_automatic_hdr_files/configured/: config.h.in
04_generate_automatic_hdr_files/libs/fun_lib/: CMakeLists.txt  fun_lib.cpp
04_group_src_hdrs_to_build/: 04_group_src_hdrs_to_build.cpp  CMakeLists.txt
04_group_src_hdrs_to_build/libs/fun_lib/: CMakeLists.txt  fun_lib1.cpp
05_google_test_fetch_content/: CMakeLists.txt
05_google_test_fetch_content/mathlib/: CMakeLists.txt
05_use_external_lib_as_git_submodule/: CMakeLists.txt  mathproj.cpp
05_use_external_lib_as_git_submodule/mathlib/: mathlib.cpp
05_use_external_lib_gtest_fetchcontent/: CMakeLists.txt  mathproj.cpp  test_mathproj.cpp
05_use_external_lib_gtest_fetchcontent/mathlib/: mathlib.h
06_add_doxygen_support/: CMakeLists.txt
06_add_doxygen_support/cmake/: Docs.cmake
06_add_doxygen_support/docs/: Doxyfile
06_add_doxygen_support/libs/fun_lib/: CMakeLists.txt  fun_lib1.cpp  fun_lib2.cpp
07_add_compile_options/: 07_add_compile_options.cpp  CMakeLists.txt
07_add_compile_options/cmake/: Sanitizer.cmake  Warnings.cmake
07_add_compile_options/libs/fun_lib/: CMakeLists.txt  fun_lib1.cpp  fun_lib1.h  fun_lib2.cpp  fun_lib2.h
